--- a/Micro/Micro.Web/Views/Coupon/CouponIndex.cshtml
+++ b/Micro/Micro.Web/Views/Coupon/CouponIndex.cshtml
@@ -35,22 +35,20 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach(var item in Model)
-                {                    
-                <tr>
-                    <td>@item.CouponCode</td>
-                    <td>@((item.DiscountAmount.ToString("c")))</td>
-                    <td>@((item.MinAmount).ToString("c"))</td>
-                    <td>
-                        <a class="btn btn-danger">
-                            <i class="bi bi-trash"></i>
-                        </a>
-                    </td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.CouponCode</td>
+                        <td>@((item.DiscountAmount.ToString("c")))</td>
+                        <td>@((item.MinAmount).ToString("c"))</td>
+                        <td>
+                            <a asp-action="CouponDelete" asp-route-couponId="@item.CouponId" class="btn btn-danger">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
-
     </div>
-
 </div>
